# hitsz-open-auto.github.io

./: .gitignore  pyproject.toml
.github/workflows/: course-single.yaml  course.yaml  update_about.yaml  weekly.yaml
scripts/: gen_news.py
